--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.12.1",
     "tailwindcss": "^3.0.24",
     "uuid": "^8.3.2"
   },
